@@ -117,6 +117,22 @@ AC_SUBST(glib_libs)
 
 dnl Check for libiconv
 AM_ICONV()
+AC_MSG_CHECKING(preferred charset formats for system iconv)
+AC_TRY_RUN([
+#include "iconv-detect.c"
+],[
+	AC_MSG_RESULT(found)
+	AC_DEFINE(HAVE_ICONV_DETECT_H)
+],[
+	AC_MSG_RESULT(not found)
+	AC_ERROR([
+	*** The iconv-detect program was unable to determine the
+	*** preferred charset formats recognized by your system
+	*** iconv library. It is suggested that you install a
+	*** working iconv library such as the one found at
+	*** ftp://ftp.gnu.org/pub/gnu/libiconv
+	])
+])
 
 dnl * Time zone stuff
 AC_CACHE_CHECK(for timezone variable, ac_cv_var_timezone,
