@@ -1,3 +1,11 @@
+2002-03-29  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* configure.in: Detect the iconv-friendly formats for iso charsets
+	at configure time and dump them into iconv-detect.h for use in
+	gmime-charset.c.
+
+	* gmime-charset.c: Updated to use iconv-detect.h if it exists.
+
 2002-03-23  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime-param.c (rfc2184_decode): Don't bother using
